--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
-h1 {
+h1, h2 {
     color: blue;
-    font-size: 30px;
     font-family: Helvetica;
+}
+
+h1 {
+    font-size: 30px;
 }  
 
 h2 {
-    color: lightblue;
     font-size: 20px;
-    font-family: Helvetica;
-}
+} 
